Fix z-index and Cursor over Behavior

--- a/awesome-bootstrap-checkbox.less
+++ b/awesome-bootstrap-checkbox.less
@@ -74,7 +74,6 @@
   input[type="checkbox"],
   input[type="radio"]{
     opacity: 0;
-    z-index: 1;
 
     &:focus + label::before{
       .tab-focus();
@@ -97,11 +96,11 @@
     }
 
     &:disabled + label{
+      cursor: not-allowed;
       opacity: 0.65;
 
       &::before{
         background-color: @input-bg-disabled;
-        cursor: not-allowed;
       }
     }
 
